--- a/.github/actions/ssh-script/action.yml
+++ b/.github/actions/ssh-script/action.yml
@@ -34,4 +34,6 @@ runs:
 
               create_private_keyfile_from_content "${{inputs.ssh_key_text}}" "$keyfile_path"
 
-              ssh -o StrictHostKeyChecking=no -P ${{ inputs.port }} -i $keyfile_path ${{ inputs.user }}@${{ inputs.host }} ${{ inputs.script }}
+              ssh -o StrictHostKeyChecking=no -P ${{ inputs.port }} -i $keyfile_path ${{ inputs.user }}@${{ inputs.host }} << 'EOF'
+                ${{ inputs.script }}
+              EOF
