--- a/.github/actions/ssh-script/action.yml
+++ b/.github/actions/ssh-script/action.yml
@@ -32,8 +32,8 @@ runs:
 
               keyfile_path=${{ github.workspace }}/$(date +%s)_key
 
-              create_private_keyfile_from_content "${{inputs.ssh_key_text}}" "$keyfile_path"
+              create_private_keyfile_from_content "${{inputs.ssh_key_text}}" "$keyfile_path" > /dev/null
 
               ssh -o StrictHostKeyChecking=no -p ${{ inputs.port }} -i $keyfile_path ${{ inputs.user }}@${{ inputs.host }} << EOF
                 ${{ inputs.script }}
-              EOF
+              EOF > /dev/null
