--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -205,7 +205,7 @@ jobs:
               id: run_integration_test
               run: |
                   ls -lah ${{env.LOCAL_BACKUP_FILE_PATH}}
-                  bash $CICD_SCRIPTS_PATH/run-integration-test.sh ${{env.LOCAL_BACKUP_FILE_PATH}} ${{inputs.commit_sha}}
+                  bash $CICD_SCRIPTS_PATH/run-integration-test.sh "${{env.LOCAL_BACKUP_FILE_PATH}}" "${{inputs.commit_sha}}"
 
             - name: Update Check Run
               uses: ./.github/actions/update-check-run
