--- a/.github/workflows/common-cicd.yml
+++ b/.github/workflows/common-cicd.yml
@@ -84,65 +84,65 @@ env:
 
 # fixme: replace docker hub with github registry because docker hub has limit to 200 pull requests per 6 hours
 jobs:
-    # unit-test-at-install:
-    #     name: ${{inputs.repo_name}} - Unit test at install
-    #     runs-on: ubuntu-latest
-    #     environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
-    #     if: inputs.action == 'test' || inputs.action == 'deploy'
-    #     steps:
-    #         - uses: actions/checkout@v4
+    unit-test-at-install:
+        name: ${{inputs.repo_name}} - Unit test at install
+        runs-on: ubuntu-latest
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        if: inputs.action == 'test' || inputs.action == 'deploy'
+        steps:
+            - uses: actions/checkout@v4
 
-    #         - name: Create Check Run
-    #           uses: ./.github/actions/create-check-run
-    #           id: create-check-run
-    #           with:
-    #               name: "Unit test at install"
+            - name: Create Check Run
+              uses: ./.github/actions/create-check-run
+              id: create-check-run
+              with:
+                  name: "Unit test at install"
 
-    #         - name: Test Preparation
-    #           uses: ./.github/actions/test-preparation
+            - name: Test Preparation
+              uses: ./.github/actions/test-preparation
 
-    #         - name: Run Unit test cases
-    #           id: run_at_install_unit_test
-    #           run: |
-    #               bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
+            - name: Run Unit test cases
+              id: run_at_install_unit_test
+              run: |
+                  bash $CICD_SCRIPTS_PATH/run-unit-test.sh "at_install"
 
-    #         - name: Update Check Run
-    #           uses: ./.github/actions/update-check-run
-    #           if: ${{always()}}
-    #           id: update-check-run
-    #           with:
-    #               check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
-    #               conclusion: ${{ steps.run_at_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+            - name: Update Check Run
+              uses: ./.github/actions/update-check-run
+              if: ${{always()}}
+              id: update-check-run
+              with:
+                  check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
+                  conclusion: ${{ steps.run_at_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
 
-    # unit-test-post-install:
-    #     name: ${{inputs.repo_name}} - Unit test post install
-    #     runs-on: ubuntu-latest
-    #     environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
-    #     if: inputs.action == 'test' || inputs.action == 'deploy'
-    #     steps:
-    #         - uses: actions/checkout@v4
+    unit-test-post-install:
+        name: ${{inputs.repo_name}} - Unit test post install
+        runs-on: ubuntu-latest
+        environment: ${{inputs.repo_name}}/${{inputs.target_branch}}
+        if: inputs.action == 'test' || inputs.action == 'deploy'
+        steps:
+            - uses: actions/checkout@v4
 
-    #         - name: Create Check Run
-    #           uses: ./.github/actions/create-check-run
-    #           id: create-check-run
-    #           with:
-    #               name: "Unit test post install"
+            - name: Create Check Run
+              uses: ./.github/actions/create-check-run
+              id: create-check-run
+              with:
+                  name: "Unit test post install"
 
-    #         - name: Test Preparation
-    #           uses: ./.github/actions/test-preparation
+            - name: Test Preparation
+              uses: ./.github/actions/test-preparation
 
-    #         - name: Run Unit test cases
-    #           id: run_post_install_unit_test
-    #           run: |
-    #               bash $CICD_SCRIPTS_PATH/run-unit-test.sh "post_install"
+            - name: Run Unit test cases
+              id: run_post_install_unit_test
+              run: |
+                  bash $CICD_SCRIPTS_PATH/run-unit-test.sh "post_install"
 
-    #         - name: Update Check Run
-    #           uses: ./.github/actions/update-check-run
-    #           if: ${{always()}}
-    #           id: update-check-run
-    #           with:
-    #               check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
-    #               conclusion: ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
+            - name: Update Check Run
+              uses: ./.github/actions/update-check-run
+              if: ${{always()}}
+              id: update-check-run
+              with:
+                  check-run-id: ${{steps.create-check-run.outputs.check-run-id}}
+                  conclusion: ${{ steps.run_post_install_unit_test.conclusion == 'success' && 'success' || 'failure' }}
 
     integration-test:
         name: ${{inputs.repo_name}} - Integration test
