--- a/.github/actions/test-preparation/action.yml
+++ b/.github/actions/test-preparation/action.yml
@@ -11,11 +11,11 @@ runs:
               ref: ${{ env.INPUT_COMMIT_SHA }}
               fetch-depth: 1
 
-        - name: Login to Docker Hub
-          uses: docker/login-action@v3
-          with:
-              username: ${{ env.DOCKERHUB_USERNAME }}
-              password: ${{ env.DOCKERHUB_TOKEN }}
+        # - name: Login to Docker Hub
+        #   uses: docker/login-action@v3
+        #   with:
+        #       username: ${{ env.DOCKERHUB_USERNAME }}
+        #       password: ${{ env.DOCKERHUB_TOKEN }}
 
         - name: Login to GitHub container registry
           run: echo "${{ secrets.CONTAINER_REGISTRY_GH_TOKEN }}" | docker login ghcr.io -u vdx-vn --password-stdin
