fix preparation step

--- a/.github/actions/test-preparation/action.yml
+++ b/.github/actions/test-preparation/action.yml
@@ -21,4 +21,5 @@ runs:
         #       password: ${{ env.DOCKERHUB_TOKEN }}
 
         - name: Login to GitHub container registry
+          shell: bash
           run: echo "${{ inputs.registry_gh_token }}" | docker login ghcr.io -u vdx-vn --password-stdin
