--- a/.github/actions/test-preparation/action.yml
+++ b/.github/actions/test-preparation/action.yml
@@ -1,7 +1,5 @@
 name: "Preparation before testing"
-inputs:
-    registry_gh_token:
-        required: true
+
 runs:
     using: "composite"
     steps:
@@ -14,12 +12,8 @@ runs:
               ref: ${{ env.INPUT_COMMIT_SHA }}
               fetch-depth: 1
 
-        # - name: Login to Docker Hub
-        #   uses: docker/login-action@v3
-        #   with:
-        #       username: ${{ env.DOCKERHUB_USERNAME }}
-        #       password: ${{ env.DOCKERHUB_TOKEN }}
-
         - name: Login to GitHub container registry
           shell: bash
-          run: echo "${{ inputs.registry_gh_token }}" | docker login ghcr.io -u vdx-vn --password-stdin
+          run: |
+              repo_owner=$(echo "${{env.INPUT_REPO_NAME}}" | cut -d'/' -f1)
+              echo "${{ env.GH_TOKEN }}" | docker login ghcr.io -u $repo_owner --password-stdin
