--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -22,7 +22,7 @@ jobs:
         runs-on: ubuntu-latest
         environment: ${{inputs.repo_name}}/${{inputs.default_branch}}
         steps:
-            - name: Checkout private repo
+            - name: Checkout project source
               uses: actions/checkout@v4
               with:
                   repository: ${{ inputs.repo_name }}
@@ -31,14 +31,24 @@ jobs:
                   ref: ${{ inputs.commit_sha }}
                   fetch-depth: 1
 
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-            - name: Build & Publish image
+            - name: Build image
               run: |
                   cd ${{ env.BUILD_PATH }}
-                  docker build -t ${{ vars.ODOO_IMAGE_TAG }} .
-                  docker push ${{ vars.ODOO_IMAGE_TAG }}
+                  docker build . \
+                        --tag ghcr.io/${{inputs.repo_name}} \
+                        --label "org.opencontainers.image.source=https://github.com/${{inputs.repo_name}}"
+
+            - name: Login to GitHub container registry
+              run: |
+                  repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
+                  echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u $repo_owner --password-stdin
+
+            - name: Publish image to GitHub container registry
+              run: |
+                  docker push ghcr.io/${{inputs.repo_name}}
+
+            - name: Remove untagged (old) image from GitHub container registry
+              uses: ./.github/actions/delete-untagged-packages
+              with:
+                  github_token: ${{ secrets.GH_TOKEN }}
+                  repo_name: ${{ inputs.repo_name }}
