--- a/.github/actions/create-check-run/action.yml
+++ b/.github/actions/create-check-run/action.yml
@@ -17,7 +17,7 @@ runs:
         - uses: actions/github-script@v7
           id: create-run-check
           with:
-              github-token: ${{ env.APP_ACCESS_TOKEN }}
+              github-token: ${{ env.GH_CHECK_RUNS_MANAGER_TOKEN }}
               script: |
                   const name = "${{inputs.name}}";
                   const status = "${{inputs.status}}";
