--- a/.github/actions/update-check-run/action.yml
+++ b/.github/actions/update-check-run/action.yml
@@ -19,7 +19,7 @@ runs:
         - uses: actions/github-script@v7
           id: update-run-check
           with:
-              github-token: ${{ env.APP_ACCESS_TOKEN }}
+              github-token: ${{ env.GH_CHECK_RUNS_MANAGER_TOKEN }}
               script: |
                   const repo_data = core.getInput("repo_name").split("/");
                   const owner = repo_data[0];
