--- a/.github/workflows/container-registry.yml
+++ b/.github/workflows/container-registry.yml
@@ -29,7 +29,7 @@ jobs:
               uses: actions/checkout@v4
               with:
                   repository: ${{ inputs.repo_name }}
-                  ssh-key: ${{ secrets.SSH_KEY_GITHUB }}
+                  ssh-key: ${{ secrets.GH_SSH_KEY }}
                   path: ${{ env.REPO_PATH }}
                   ref: ${{ inputs.commit_sha }}
                   fetch-depth: 1
