--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,35 +8,18 @@ on:
             commit_sha:
                 required: true
                 type: string
-            default_branch:
-                required: true
-                type: string
-
-env:
-    REPO_PATH: ${{ github.workspace }}
-    BUILD_PATH: ${{ github.workspace }}/.build
-
-    # ==== Environment secrets =====
-    SERVER_PRIVATE_KEY: ${{ secrets.SERVER_PRIVATE_KEY }}
-
-    # ===== Environment variables =====
-    SERVER_HOST: ${{ vars.SERVER_HOST }}
-    SERVER_USER: ${{ vars.SERVER_USER }}
-    SERVER_SSH_PORT: ${{ vars.SERVER_SSH_PORT }}
-    SERVER_DEPLOY_PATH: ${{ vars.SERVER_DEPLOY_PATH }}
 
 jobs:
     build:
         name: build
         runs-on: ubuntu-latest
-        environment: ${{inputs.repo_name}}/${{inputs.default_branch}}
         steps:
             - name: Checkout project source
               uses: actions/checkout@v4
               with:
                   repository: ${{ inputs.repo_name }}
                   ssh-key: ${{ secrets.GH_SSH_KEY }}
-                  path: ${{ env.REPO_PATH }}
+                  path: ${{ github.workspace }}
                   ref: ${{ inputs.commit_sha }}
                   fetch-depth: 1
 
@@ -47,7 +30,7 @@ jobs:
 
             - name: Build image
               run: |
-                  cd ${{ env.BUILD_PATH }}
+                  cd ${{ github.workspace }}/.build
                   docker build . \
                         --tag ghcr.io/${{inputs.repo_name}} \
                         --label "org.opencontainers.image.source=https://github.com/${{inputs.repo_name}}" \
@@ -64,17 +47,3 @@ jobs:
               with:
                   github_token: ${{ secrets.GH_TOKEN }}
                   repo_name: ${{ inputs.repo_name }}
-
-            - name: " Update latest docker images on server"
-              uses: ./.github/actions/ssh-script
-              id: deploy_to_server
-              with:
-                  host: ${{env.SERVER_HOST}}
-                  port: ${{env.SERVER_SSH_PORT}}
-                  user: ${{env.SERVER_USER}}
-                  ssh_key_text: ${{ env.SERVER_PRIVATE_KEY }}
-                  script: |
-                      cd ${{ env.SERVER_DEPLOY_PATH }}
-                      docker compose pull
-                      docker compose down
-                      docker compose up -d
