--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,8 +10,7 @@ on:
                 type: string
 
 jobs:
-    build:
-        name: build
+    build-and-publish:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout project source
@@ -47,3 +46,26 @@ jobs:
               with:
                   github_token: ${{ secrets.GH_TOKEN }}
                   repo_name: ${{ inputs.repo_name }}
+
+    update-on-server:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Get all branches of project repo
+              uses: actions/github-script@v7
+              with:
+                  github-token: ${{ secrets.GH_TOKEN }}
+                  script: |
+                      const [owner, repo] = "${{ inputs.repo_name }}".split("/");
+                      const branches = await github.rest.repos.listBranches({
+                        owner,
+                        repo,
+                      });
+                      for (branch in branches) {
+                        console.log(branch)
+                      }
+
+        #fixme: after build success,
+        # fixme: second step is trigger update latest image for all server (defined in the environment)
+        # https://octokit.github.io/rest.js/v21/#repos-list-branches
+        # use this api to get all branches
+        # and call workflow docker-update.yml with all the environment created from this one
