--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,42 +14,43 @@ on:
                 description: List of branches related to environment, which contains server information that need to update to the latest images
 
 jobs:
-    build-and-publish:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Checkout project source
-              uses: actions/checkout@v4
-              with:
-                  repository: ${{ inputs.repo_name }}
-                  ssh-key: ${{ secrets.GH_SSH_KEY }}
-                  path: ${{ github.workspace }}
-                  ref: ${{ inputs.commit_sha }}
-                  fetch-depth: 1
+    #fixme: uncomment below step
+    # build-and-publish:
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - name: Checkout project source
+    #           uses: actions/checkout@v4
+    #           with:
+    #               repository: ${{ inputs.repo_name }}
+    #               ssh-key: ${{ secrets.GH_SSH_KEY }}
+    #               path: ${{ github.workspace }}
+    #               ref: ${{ inputs.commit_sha }}
+    #               fetch-depth: 1
 
-            - name: Login to GitHub container registry
-              run: |
-                  repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
-                  echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u $repo_owner --password-stdin
+    #         - name: Login to GitHub container registry
+    #           run: |
+    #               repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
+    #               echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u $repo_owner --password-stdin
 
-            - name: Build image
-              run: |
-                  cd ${{ github.workspace }}/.build
-                  docker build . \
-                        --tag ghcr.io/${{inputs.repo_name}} \
-                        --label "org.opencontainers.image.source=https://github.com/${{inputs.repo_name}}" \
-                        --label "github.run.id=${GITHUB_RUN_ID}"
+    #         - name: Build image
+    #           run: |
+    #               cd ${{ github.workspace }}/.build
+    #               docker build . \
+    #                     --tag ghcr.io/${{inputs.repo_name}} \
+    #                     --label "org.opencontainers.image.source=https://github.com/${{inputs.repo_name}}" \
+    #                     --label "github.run.id=${GITHUB_RUN_ID}"
 
-            - name: Publish image to GitHub container registry
-              run: |
-                  docker push ghcr.io/${{inputs.repo_name}}
+    #         - name: Publish image to GitHub container registry
+    #           run: |
+    #               docker push ghcr.io/${{inputs.repo_name}}
 
-            - uses: actions/checkout@v4
+    #         - uses: actions/checkout@v4
 
-            - name: Remove untagged (old) image from GitHub container registry
-              uses: ./.github/actions/delete-untagged-packages
-              with:
-                  github_token: ${{ secrets.GH_TOKEN }}
-                  repo_name: ${{ inputs.repo_name }}
+    #         - name: Remove untagged (old) image from GitHub container registry
+    #           uses: ./.github/actions/delete-untagged-packages
+    #           with:
+    #               github_token: ${{ secrets.GH_TOKEN }}
+    #               repo_name: ${{ inputs.repo_name }}
 
     update-on-server:
         runs-on: ubuntu-latest
@@ -70,6 +71,9 @@ jobs:
 
                       const input_branches = "${{ inputs.branches }}".split("/");
                       const repo_branches = branches.data.map(x => x.name);
+                      console.log(input_branches)
+                      console.log("=========================")
+                      console.log(repo_branches)
                       return repo_branches.filter(x => input_branches.includes(x));
 
             - name: Dispatch Executor Workflow - Build Docker Image
