--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -57,6 +57,8 @@ jobs:
         # fixme: uncomment needs
         # needs: build-and-publish
         steps:
+            - uses: actions/checkout@v4
+
             - name: Get all branches of project repo
               id: get-repo-branches
               uses: actions/github-script@v7
