--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -80,9 +80,11 @@ jobs:
 
             - name: Dispatch Executor Workflow - Build Docker Image
               run: |
-                  IFS=','
-                  for branch in ${{ steps.get-repo-branches.outputs.result }}; do
+                  export IFS=";"
+                  branches=${{ steps.get-repo-branches.outputs.result }}
+                  for branch in $branches; do
                       echo $branch
+                      echo "=======>>>>>>>>"
                       gh workflow run docker-update.yml -f repo_name=${{ inputs.repo_name }} -f branch=$branch
                   done
               env:
