--- a/.github/workflows/docker-update.yml
+++ b/.github/workflows/docker-update.yml
@@ -31,3 +31,4 @@ jobs:
                       docker compose pull
                       docker compose down
                       docker compose up -d
+                      docker image prune -a -f
