--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,37 +8,77 @@ on:
             commit_sha:
                 required: true
                 type: string
-            default_branch:
-                required: true
+            branches:
                 type: string
-
-env:
-    REPO_PATH: ${{ github.workspace }}
-    BUILD_PATH: ${{ github.workspace }}/.build
+                default: dev,production
+                description: List of branches related to environment, which contains server information that need to update to the latest images
 
 jobs:
-    build:
-        name: build
+    build-and-publish:
         runs-on: ubuntu-latest
-        environment: ${{inputs.repo_name}}/${{inputs.default_branch}}
         steps:
-            - name: Checkout private repo
+            - name: Checkout project source
               uses: actions/checkout@v4
               with:
                   repository: ${{ inputs.repo_name }}
-                  ssh-key: ${{ secrets.SSH_KEY_GITHUB }}
-                  path: ${{ env.REPO_PATH }}
+                  ssh-key: ${{ secrets.GH_SSH_KEY }}
+                  path: ${{ github.workspace }}
                   ref: ${{ inputs.commit_sha }}
                   fetch-depth: 1
 
-            - name: Login to Docker Hub
-              uses: docker/login-action@v3
-              with:
-                  username: ${{ secrets.DOCKERHUB_USERNAME }}
-                  password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-            - name: Build & Publish image
+            - name: Login to GitHub container registry
               run: |
-                  cd ${{ env.BUILD_PATH }}
-                  docker build -t ${{ vars.ODOO_IMAGE_TAG }} .
-                  docker push ${{ vars.ODOO_IMAGE_TAG }}
+                  repo_owner=$(echo "${{inputs.repo_name}}" | cut -d'/' -f1)
+                  echo "${{ secrets.GH_TOKEN }}" | docker login ghcr.io -u $repo_owner --password-stdin
+
+            - name: Build image
+              run: |
+                  cd ${{ github.workspace }}/.build
+                  docker build . \
+                        --tag ghcr.io/${{inputs.repo_name}} \
+                        --label "org.opencontainers.image.source=https://github.com/${{inputs.repo_name}}" \
+                        --label "github.run.id=${GITHUB_RUN_ID}"
+
+            - name: Publish image to GitHub container registry
+              run: |
+                  docker push ghcr.io/${{inputs.repo_name}}
+
+            - uses: actions/checkout@v4
+
+            - name: Remove untagged (old) image from GitHub container registry
+              uses: ./.github/actions/delete-untagged-packages
+              with:
+                  github_token: ${{ secrets.GH_TOKEN }}
+                  repo_name: ${{ inputs.repo_name }}
+
+    update-on-server:
+        runs-on: ubuntu-latest
+        needs: build-and-publish
+        steps:
+            - uses: actions/checkout@v4
+
+            - name: Get all branches of project repo
+              id: get-repo-branches
+              uses: actions/github-script@v7
+              with:
+                  github-token: ${{ secrets.GH_TOKEN }}
+                  script: |
+                      const [owner, repo] = "${{ inputs.repo_name }}".split("/");
+                      const branches = await github.rest.repos.listBranches({
+                        owner,
+                        repo,
+                      });
+
+                      const input_branches = "${{ inputs.branches }}".split(",");
+                      const repo_branches = branches.data.map(x => x.name);
+                      return repo_branches.filter(x => input_branches.includes(x)).join(',');
+
+            - name: Dispatch Executor Workflow - Build Docker Image
+              run: |
+                  export IFS=","
+                  branches=${{ steps.get-repo-branches.outputs.result }}
+                  for branch in $branches; do
+                      gh workflow run docker-update.yml -f repo_name=${{ inputs.repo_name }} -f branch=$branch
+                  done
+              env:
+                  GH_TOKEN: ${{ secrets.GH_TOKEN }}
